Below you can find what changed in each version. Version number convention is based basically on changes made to database structure. In case when we made some changes in 
database structure we're incrementing number after first decimal (i.e 1.1, 1.2). Otherwise we're incrementing the number after second decimal (i.e 1.2.1, 1.2.2)



Version 1.3
- Fixed box width in admin panel
- Added form "Author"
- Added gradient backgrounds of the input types boxes in admin panel
- Fixed bug with not mandatory radio buttons
- Each field has a description now, which is displayed on a front, on a top of the field box
- Added possibility to set header for confirmation page
- Added possibility to set header for receipt page

Version 1.2
- Added possibility to split the from into parts (attribute "page separator")
- Added possibility to disable attribute, so it won't be visible or front nor sent in email
- Added possibility of sending emails to additional recipients (set on "Email" validated text)
- Added "Email sender" field, for the form
- When form is being removed, it's checked whether it's assigned to any nodes
- Added possibility to display confirmation page on front
- Added "Date" validator. On front it's connected to jQuery datepicker

Version 1.1
- Removed possibility to add CSS styles directly from admin panel
- Removed textarea validation
- Changed method of adding new attributes to the form
- Added some CSS styling to attribute boxes in admin panel
- Added radio button attribute
- jQuery confirm window replaced by default browser confirm window
- Fixed checkbox and radio buttons values in email message