@@ -135,7 +135,7 @@ class FormMakerFunctionCollection
                                               'attributes'          => $form_page['attributes'],
                                               'validation'          => $errors,
                                               'current_page'        => $current_page,
-                                              'pages_count'         => count( $all_pages ),
+                                              'all_pages'           => $all_pages,
                                               'date_validator'      => formValidators::DATE_ID,
                                               'counted_validators'  => formAttrvalid::countValidatorsForAttributes()));
         return array('result' => $result);
