@@ -11,6 +11,7 @@ Version 1.3
 - Each field has a description now, which is displayed on a front, on a top of the field box
 - Added possibility to set header for confirmation page
 - Added possibility to set header for receipt page
+- Added form steps, visible on the top of the form. Current step is marked.
 
 Version 1.2
 - Added possibility to split the from into parts (attribute "page separator")
